# wordle_score

./: Cargo.toml  LICENSE  README.md
benches/: scoring_benchmark.rs  scoring_benchmark_2.rs
src/: lib.rs  wordle_score_1.rs  wordle_score_2.rs
