[package]
name = "wordle_score"
version = "0.1.0"
edition = "2021"
authors = ["Hugh Brown <hughdbrown@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-tarpaulin = "0.25.2"

[dependencies.pyo3]
pyo3 = { version = "0.18.3", features = ["extension-module"] }


[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "scoring_benchmark_2"
harness = false

